# DrummondGeometry-evals

./: .gitignore  BACKTEST_PLAN_NOV6_NOV13.md  DATA_COLLECTION_QUALITY_REPORT.md  EODHD_API_ISSUE_ANALYSIS.md  EODHD_INTRADAY_DATA_DELAY_ISSUE.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_STATUS_REPORT.md  README.md  check_collection_status.py  check_data_freshness.py  implementation_plan.md  pyproject.toml  run_dashboard.py  run_one_month_backtest.sh  start_production.sh  test_discord_bot.py  verify_data_collection.py
config/: production.yaml
docs/: 30MIN_BACKFILL_PLAN.md  90DAY_BACKTEST_PLAN.md  API_DOCUMENTATION.md  ARCHITECTURE_IMPROVEMENTS_SUMMARY.md  BACKFILL_VALIDATION_FINDINGS.md  BACKTEST_CRITICAL_FIXES_COMPLETE.md  BACKTEST_CRITICAL_FIXES_PLAN.md  BACKTEST_CRITICAL_PERFORMANCE_FIXES_COMPLETE.md  BACKTEST_CRITICAL_PERFORMANCE_FIXES_PLAN.md  BACKTEST_HIGH_IMPACT_FIXES_COMPLETE.md  BACKTEST_HIGH_IMPACT_FIXES_PLAN.md  BACKTEST_PERFORMANCE_REPORT.md  BACKTEST_PERFORMANCE_REVIEW.md  BACKTEST_REALISTIC_SIMULATION_REVIEW.md  BACKTEST_SIGNAL_GENERATION_VERIFICATION.md  BUGFIX_CONFLUENCE_COUNT.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_USAGE.md  COMPREHENSIVE_PRODUCTION_PLAN.md  CONFIGURE_COMMAND_GUIDE.md  CRITICAL_IMPLEMENTATION_REVIEW.md  Critical_Review_grok.md  DAILY_BACKFILL_IMPLEMENTATION.md  DASHBOARD_SETUP.md  DASHBOARD_USAGE_GUIDE.md  DASHBOARD_USER_GUIDE.md  DATABASE_CLEANUP_REPORT.md  DATA_COLLECTION_TROUBLESHOOTING.md  DRUMMOND_GEOMETRY_REFERENCE.md  DRUMMOND_IMPLEMENTATION_IMPROVEMENTS.md  Day3_Implementation_Summary.md  Day4_Implementation_Summary.md  (+69 more)
(+302 files in other folders)
